--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -27,11 +27,17 @@
   url = {https://github.com/lordconstant/SubclassPropertyDrawer},
   date = {2023-03-25},
 }
+@software{AnimationRigging,
+  author = {{Unity Technologies}},
+  title = {Animation Rigging},
+  url = {https://docs.unity3d.com/Packages/com.unity.animation.rigging@1.3/manual/index.html},
+  date = {2023-03-25},
+}
 @software{ConfigurableJointExtensions,
   author = {{mstevenson}},
   title = {ConfigurableJointExtensions.cs},
   url = {https://gist.github.com/mstevenson/4958837},
-  date = {2023-03-25},
+  date = {2020-01-21},
 }
 
 @misc{InvertReverseUIMask,
@@ -239,6 +245,16 @@
   title           = {Accelerometer-based smartphone step detection using machine learning technique},
   year            = {2017},
   url             = {https://ieeexplore.ieee.org/abstract/document/8075875},
+}
+
+
+@article{FabrikSolverIK,
+  author          = {Aristidou, Andreas and Lasenby, Joan},
+  journal         = {Graphical Models},
+  number          = {73(5)},
+  title           = {FABRIK: A fast, iterative solver for the Inverse Kinematics problem},
+  year            = {2011},
+  url             = {http://www.andreasaristidou.com/FABRIK.html},
 }
 
 @booklet{SapkowskiZaklinac,
