--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -171,6 +171,12 @@
   note = {Accessed: 2023-04-23}
 }
 
+@misc{FBXFormat,
+  author          = {Autodesk},
+  title = {FBX File Format},
+  url          = {https://help.autodesk.com/view/FBX/2017/ENU/},
+}
+
 @article{Satrh,
   author          = {Vojáček, Tomáš "Vojcl"},
   journal         = {Larp.cz},
