--- a/cs/kap03.tex
+++ b/cs/kap03.tex
@@ -244,7 +244,7 @@ V typické hře je třeba tímto způsobem vykonávat napříč velkým množstv
 
 Základem je komponenta \textit{Animator}. Tu jednoduše umístíme na objekt animovatelného 3D modelu, nakonfigurujeme ji, a ta následně nad pohybem kostí přebere plnou kontrolu. Posíláním zpráv a upravováním animačních proměnných jsme schopni vybírat, která animace se má přehrávat, a kontrolovat některé její parametry, přímou kontrolu nad polohami kostí však ztrácíme. 
 
-V mnoha případech takovéto přehrávání předpřipravených animací postačuje, některé vizuální efekty však činí problém - např. nelze otáčet hlavu postavy za pohybujícím se objektem či polohovat samopal v rukou vojáka přesně ve směru kam hráč míří. Pro řešení takovýchto situací je nutné nad částí animace mít přímou kontrolu skrze skript - v Unity nám vrstvu, která umožňuje tuto tzv. \textit{procedurální animaci}, poskytuje balíček Animation Rigging \cite{AnimationRigging}.
+V mnoha případech takovéto přehrávání předpřipravených animací postačuje, některé vizuální efekty však činí problém - např. nelze otáčet hlavu postavy za pohybujícím se objektem či polohovat samopal v rukou vojáka přesně ve směru kam hráč míří. Pro řešení takovýchto situací je nutné nad částí animace mít přímou kontrolu skrze skript - v Unity nám nadstavbu, která umožňuje tuto tzv. \textit{procedurální animaci}, poskytuje balíček Animation Rigging \cite{AnimationRigging}.
 
 
 \section{Shrnutí}
