--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -4,21 +4,18 @@
   title = {Unity Engine},
   url = {https://docs.unity3d.com/2022.2/Documentation/Manual},
   version = {2022.2.13f},
-  date = {2023-03-25},
 }
 
 @software{DoTween,
   author = {{Demigiant}},
   title = {DOTween},
   url = {http://dotween.demigiant.com/},
-  date = {2023-03-25},
 }
 
 @software{MathDotNetNumerics,
   author = {{Math.NET Project}},
   title = {Math.NET Numerics},
   url = {https://numerics.mathdotnet.com/},
-  date = {2023-03-25},
 }
 
 @software{SubclassPropertyDrawer,
@@ -30,8 +27,14 @@
 @software{AnimationRigging,
   author = {{Unity Technologies}},
   title = {Animation Rigging},
+  version = {1.3f},
   url = {https://docs.unity3d.com/Packages/com.unity.animation.rigging@1.3/manual/index.html},
-  date = {2023-03-25},
+}
+@software{TextMeshPro,
+  author = {{Unity Technologies}},
+  title = {TextMesh Pro},
+  version = {4.0},
+  url = {https://docs.unity3d.com/Packages/com.unity.textmeshpro@3.0/manual/index.html},
 }
 @software{ConfigurableJointExtensions,
   author = {{mstevenson}},
